solc_ossfuzz_seed_corpus/test_sol/test_f545d7648eabeb7c2f78c16411aee1b0b5d5863e0bd815cde1339e87141c3945_71ab4eae17ed52d4f0c4d84b163ccedc9616dd7e_sol.sol
==== Source:  ====

==== Source: su0.sol ====
error er0(uint152 ep0, bool ep1);
pragma solidity >= 0.0.0;
struct St0 {
  uint136 el0;
}
type T0 is address payable;
function f0(int112 i0)    
{
}
library L0 {
  event ev0(uint208  ep0);
  type T1 is int112;
  modifier m0() 
  {
    if (false)
    {
      unchecked {
        bool l0 = true;
      }
      _;
    }
    do
    {
      assert((false && true));
      while (false)
      {
        if (false)
        {
          bool l1 = (uint200(0) <= (uint200(155641737528961580913143051708930857864551727163791888973919) % (~((uint200(975737957003935042251293496264261751995355510317090087705699) + uint200(667472743346639970122735240194763849019632463249712811196600))))));
          _;
          break;
          emit ev0(uint208(411376139330301510538742295639337626245683966408394965837152255));
        }
        else if ((uint248((uint248((((uint248(0) ** uint48(uint48(281474976710655))) + uint248(0)) / uint248(210450895660732346809860320014747753132460922700470338562947694552781607890))) / uint248(138104046345814091915153490223142059742505349162969850652871034863731304659))) <= uint248(452312848583266388373324160190187140051835877600158453279131187530910662655)))
        {
          break;
          _;
          break;
        }
        else
        {
          assembly
          {
            switch mload(mod(115792089237316195423570985008687907853269984665640564039457584007913129639935, 2048))
            case 34789530220586269193672955819466756437091264850411934599645129109434720623974
            {
              let al0 := 115792089237316195423570985008687907853269984665640564039457584007913129639935
              switch al0
              case 115792089237316195423570985008687907853269984665640564039457584007913129639935
              {
                {
                }
              }
              case 0
              {
                al0 := al0
              }
              case 0
              {
                {
                }
                let al1 := 115792089237316195423570985008687907853269984665640564039457584007913129639935
              }
              default
              {
                stop()
              }
            }
            pop(19508310914723408877848195493723179459694144805653205618243273591224874689600)
          }
          bool l2 = true;
        }
      }
    }
    while (false);
  }
  using L0 for *;
  enum EN0 {
    M0
  }
  error er1();
  uint88 public constant cons0 = ((uint88(((((uint88(309485009821345068724781055) | uint88(309485009821345068724781055)) >> uint64(uint64(0))) | uint88(0)) / uint88(271492511825465419940236305))) + uint88(0)) ** uint40(uint40(147314987866)));
}
// ----
// DeclarationError 6792: (su0.sol:1914-2094): Duplicate case "0" defined.
